# BC250-HUD

./: .gitattributes  .gitignore  README.md
Release/: README.md  deploy.sh  host-setup.sh  install.sh
Release/config/: config.txt  cpu-performance.service  journald.conf  kms.json
Release/daemon/: bc250-sleep-hook.sh  bc250_daemon.py  bc250_daemon.service
Release/dtbs/: bcm2710-rpi-2-b.dtb  bcm2710-rpi-3-b-plus.dtb  bcm2710-rpi-3-b.dtb  bcm2710-rpi-cm0.dtb  bcm2710-rpi-cm3.dtb  bcm2710-rpi-zero-2.dtb  bcm2711-rpi-4-b.dtb  bcm2711-rpi-400.dtb  bcm2711-rpi-cm4-io.dtb  bcm2711-rpi-cm4.dtb  bcm2711-rpi-cm4s.dtb  bcm2712-d-rpi-5-b.dtb  bcm2712-rpi-5-b.dtb  bcm2712-rpi-500.dtb  bcm2712-rpi-cm5-cm4io.dtb  bcm2712-rpi-cm5-cm5io.dtb  bcm2712-rpi-cm5l-cm4io.dtb  bcm2712-rpi-cm5l-cm5io.dtb  bcm2712d0-rpi-5-b.dtb
Release/dtbs/overlays/: at86rf233.dtbo  audiosense-pi.dtbo  camera-mux-2port.dtbo  camera-mux-4port.dtbo  chipcap2.dtbo  crystalfontz-cfa050_pi_m.dtbo  dacberry400.dtbo  draws.dtbo  gpio-poweroff.dtbo  i2c-sensor.dtbo  ilitek-ts-i2c.dtbo  mcp23s17.dtbo  ov9281.dtbo  pcie-32bit-dma-pi5.dtbo  rpi-power-hat-b.dtbo  (+22 more)
Release/hud/: hud.qml  hudc_new
Release/kernel/: kernel8.img  modules-6.18.6-drm-sched-v8+.tar.xz
Release/src/: hud.qml
config/: 70-pi-usb.rules
daemon/: bc250_daemon.py
hudc/: CMakeLists.txt  Containerfile.builder  hudc.service  hudcw.service
hudc/src/: backlightcontroller.cpp  backlightcontroller.h  daemonreceiver.cpp  daemonreceiver.h  hudmodel.cpp  hudmodel.h  main.cpp
kernel/: .gitignore  Containerfile  PATCH.md  build.sh  deploy.sh
(+5 files in other folders)
